# PitchPulse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: server.py
backend/: app.py  assistant.py  crowd_sim.py  requirements.txt
backend/data/: stadium.json
frontend/: dashboard.html  index.html
public/: nexus-theme.css
tests/: test_app.py
