[project]
name = "pitchpulse"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.3",
    "anthropic==0.40.0",
    "pydantic>=2.0",
    "Flask-Cors>=4.0.0",
]

[tool.ruff]
# Set linting standards
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
# Set static typing check configurations
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
